k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: backend
          image: codewithcliff.azurecr.io/backend:4
          ports:
            - containerPort: 80
              name: backend
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: backend
---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: nosql
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: nosql
#   template:
#     metadata:
#       labels:
#         app: nosql
#     spec:
#       nodeSelector:
#         "kubernetes.io/os": linux
#       containers:
#         - name: nosql
#           image: tanjeffreyz.azurecr.io/nosql:$(Build.BuildId)
#           env:
#             - name: ALLOW_EMPTY_PASSWORD
#               value: "yes"
#           ports:
#             - containerPort: 80
#               name: nosql
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nosql-service
# spec:
#   ports:
#     - port: 80
#       targetPort: 80
#   selector:
#     app: nosql
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: frontend
          image: codewithcliff.azurecr.io/frontend:4
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend
